# claude-code-rust

./: .env  .gitignore  ARCHITECTURE_SUMMARY.md  CLAUDE_CODE_RUST_ANALYSIS.md  Cargo.toml  README.md  claude-rust.bat  优化计划.md  已实现功能总结.md  快速开始.md  配置指南.md
claude-code-complete/: Cargo.toml  README.md
claude-code-complete/src/: app.rs  main.rs
claude-code-complete/src/core/: mcp_server.rs  mod.rs  permissions.rs  session_manager.rs  tool_system.rs
claude-code-complete/src/events/: event_bus.rs  mod.rs  types.rs
claude-code-complete/src/io/: mod.rs  structured_io.rs  terminal_renderer.rs
claude-code-complete/src/state/: app_state.rs  mod.rs  session.rs
claude-code-complete/src/ui/: mod.rs  theme.rs
claude-code-complete/src/ui/widgets/: chat_panel.rs  companion.rs  mod.rs  sidebar.rs  status_bar.rs
claude-code-complete/src/utils/: config.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/providers/: mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bash.rs  config.rs  hooks.rs  lib.rs  permissions.rs  sandbox.rs  session.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
gui-tauri/: README.md  USAGE.md  package-lock.json  package.json
gui-tauri/src/: app.js  index.html  styles.css
src/: lib.rs
src/api/: mod.rs
src/cli/: args.rs  enhanced_ui.rs  mod.rs  repl.rs  ui.rs
src/config/: api_config.rs  mod.rs
src/gui/: chat.rs  settings.rs
src/mcp/: tools.rs
src/performance/: budget.rs  context_compressor.rs  error_classifier.rs  mod.rs  prompt_cache.rs  rate_limiter.rs  retry_policy.rs  smart_router.rs  tool_persistence.rs
src/tools/: bash_security.rs  glob_tool.rs  grep_tool.rs  mod.rs  sandbox.rs  smart_edit.rs
src/tools/advanced/: agent.rs  ask_question.rs  bash.rs  brief.rs  config.rs  cron.rs  escalation.rs  lsp.rs  mcp_bridge.rs  mcp_tools.rs  mod.rs  notebook.rs  permission_tools.rs  plan_mode.rs  powershell.rs  send_message.rs  skill.rs  task_tools.rs  team.rs  todo_write.rs  tool_search.rs  web_tools.rs  worker.rs  worktree.rs
