[package]
name = "claude-code-complete"
version = "0.1.0"
edition = "2021"
description = "Complete reimplementation of Claude Code in Rust - deep analysis of original architecture"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Terminal UI (Ratatui = original Ink for Rust)
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }
colored = "2.1"

# HTTP & API
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5.0"

# State management
dashmap = "5.5"
lru = "0.12"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system
walkdir = "2.5"
notify = "6.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Diff
similar = "2.5"

# Markdown
pulldown-cmark = "0.10"

# Regex
regex = "1.10"

# Process
which = "6.0"

# WebSocket
tokio-tungstenite = "0.21"

# JSON-RPC for MCP
jsonrpsee = { version = "0.22", features = ["full"] }

# Random for animations
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"

[[bin]]
name = "claude-code"
path = "src/main.rs"
