[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Multi-provider API client support"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
thiserror = "1.0"